Fix to make layer list header visible at all times.
Also improved scrollbar styling/positioning for toolbar and layers list.

--- a/src/styles/_layer.scss
+++ b/src/styles/_layer.scss
@@ -2,11 +2,14 @@
 .maputnik-layer-list {
   height: 100%;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
 
   &-header {
     padding: $margin-2 $margin-2 $margin-3;
 
     @include flex-row;
+    flex: 0 0;
 
     > * {
       vertical-align: middle;
@@ -25,6 +28,9 @@
     padding: 0;
     margin: 0;
     padding-bottom: $margin-5;
+    flex: 1;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   &-item-handle {
