--- a/src/styles/_toolbar.scss
+++ b/src/styles/_toolbar.scss
@@ -17,7 +17,7 @@
   text-decoration: none;
   display: block;
   flex: 0 0 190px;
-  width: 190px;
+  width: 200px;
   text-align: left;
   background-color: $color-black;
   padding: $margin-2;
